--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest",
+    "test": "check-node-version --node '>= 22.0.0' && jest",
     "test:watch": "jest --watch"
   },
   "dependencies": {
@@ -25,6 +25,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "check-node-version": "^4.2.1",
     "eslint": "^9",
     "eslint-config-next": "15.1.4",
     "jest": "^29.7.0",
